--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "imagekitio-interview-assignment-client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "yarn": "1.x",
+    "node": "14.x",
+    "npm": "7.x"
+  },
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
